--- a/rowers-analysis/requirements.txt
+++ b/rowers-analysis/requirements.txt
@@ -1,5 +1,7 @@
-streamlit==1.39.0
-pandas==2.1.4
-plotly==5.12.0
-matplotlib==3.7.1
+streamlit==1.25.0
+pandas==1.5.3
+plotly==5.10.0
 seaborn==0.12.2
+matplotlib==3.6.3
+scikit-learn==1.2.1
+statsmodels==0.13.5
