--- a/rowers-analysis/requirements.txt
+++ b/rowers-analysis/requirements.txt
@@ -1,11 +1,8 @@
-streamlit==1.25.0
-pandas==1.5.3
-plotly==5.10.0
-matplotlib==3.6.3
-seaborn==0.12.2
-scikit-learn==1.2.2
-statsmodels==0.13.5
-setuptools==67.0.0
-distlib==0.3.7
-wheel==0.41.2
-pillow==8.3.1
+streamlit
+pandas
+plotly
+matplotlib
+seaborn
+scikit-learn
+statsmodels
+wheel
